# elastic-search-lesson

./: .gitignore  README.md  client.py  docker-compose.yml  main.py  pyproject.toml
amazon_excercise/: load_amazon_toy_products.py  search_amazon.py
csv_data/: three_lines.csv
examples/: add_data.py  elasticclient.py  get_data.py
excercise/: aggregate_search.py  facet_seach.py  load_reviews_data.py  search_bad_reviews.py
